Allow multiple selects, Redshift support